07-network-policies/manifests/01-database-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: database
spec:
  endpointSelector: {}   # Sélectionne tous les endpoints du namespace
  ingressDeny:
    - fromEntities:
        - "all"          # Bloque tout le trafic entrant
  egressDeny:
    - toEntities:
        - "all"          # Bloque tout le trafic sortant
