07-network-policies/manifests/02-database-allow-from-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-from-api
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: api
            app: api
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
