07-network-policies/manifests/04-api-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: api
spec:
  endpointSelector: {}
  ingress: []
  egress: []
