07-network-policies/manifests/06-api-allow-egress-db.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-database
  namespace: api
spec:
  endpointSelector:
    matchLabels:
      app: api
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            app: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
